This library generates manual C++ template instantiations.  It should
no longer be useful on modern compilers, which do this automatically.

** Ispell

---
*** New hook 'ispell-change-dictionary-hook'.
This runs after changing the dictionary and could be used to
automatically spellcheck a buffer when changing language without
needing to advice 'ispell-change-dictionary'.


* New Modes and Packages in Emacs 27.1

** fileloop.el lets one setup multifile operations like search&replace.

+++
** Emacs can now visit files in archives as if they were directories.
This feature uses Tramp and works only on systems which support GVFS,
i.e. GNU/Linux, roughly spoken.  See the node "(tramp) Archive file
names" in the Tramp manual for full documentation of these facilities.

+++
** New library for writing JSONRPC applications (https://jsonrpc.org).
The 'jsonrpc' library enables writing Emacs Lisp applications that
rely on this protocol.  Since the protocol is designed to be
transport-agnostic, the library provides an API to implement new
transport strategies as well as a separate API to use them.  A
transport implementation for process-based communication, such as is
used by the Language Server Protocol (LSP), is readily available.

+++
** Backtrace mode improves viewing of Elisp backtraces.
Backtrace mode adds pretty printing, fontification and ellipsis
expansion to backtrace buffers produced by the Lisp debugger, Edebug
and ERT.  See the node "(elisp) Backtraces" in the Elisp manual for
documentation of the new mode and its commands.

+++
** so-long.el helps to mitigate performance problems with long lines.
When 'global-so-long-mode' has been enabled, visiting a file with very
long lines will (subject to configuration) cause the user's preferred
'so-long-action' to be automatically invoked (by default, the buffer's
major mode is replaced by 'so-long-mode').  In extreme cases this can
prevent delays of several minutes, and make Emacs responsive almost